--- a/vuvu/package.json
+++ b/vuvu/package.json
@@ -2,5 +2,26 @@
   "name": "vuvu",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "vite build",
+    "serve": "vite preview --port 8080 --strictPort",
+    "dev": "vite dev  --port 8080 --strictPort"
+  },
+  "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.3.3",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.16",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
+    "vite-plugin-vuetify": "^1.0.2"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vue": "^3.3.8"
+  }
 }
