Initial bundling of vue with webpack: not working

--- a/rere/tsconfig.json
+++ b/rere/tsconfig.json
@@ -1,32 +1,22 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "useDefineForClassFields": true,
-        "lib": ["ESNext", "DOM", "DOM.Iterable"],
-        "module": "ESNext",
-        "skipLibCheck": true,
-
-        /* Bundler mode */
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "noEmit": true,
-        // "jsx": "react-jsx",
-        "jsx": "react",
-
-        /* Linting */
+        "outDir": "./dist/",
+        "sourceMap": true,
         "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true,
-
+        "noImplicitReturns": true,
+        "noImplicitAny": true,
+        "module": "esnext",
+        "downlevelIteration": true,
+        "moduleResolution": "node",
+        "target": "es5",
+        "allowJs": true,
+        "declaration": true,
+        "jsx": "react",
         "baseUrl": ".",
-        "typeRoots": ["src/typings.ts", "./node_modules/@types"],
+        "typeRoots": ["src/typings", "./node_modules/@types"],
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["src/*"]
         }
     },
-    "include": ["src"],
-    "references": [{ "path": "./tsconfig.node.json" }]
+    "include": ["./src/**/*"]
 }
