--- a/rere/package.json
+++ b/rere/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "serve": "vite preview --port 8081 --strictPort",
     "dev": "vite --port 8081 --strictPort",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "w:serve": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,17 @@
     "@types/react-dom": "^18.2.16",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "typescript": "^5.3.2"
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.3",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
