--- a/rere/tsconfig.json
+++ b/rere/tsconfig.json
@@ -1,22 +1,23 @@
 {
     "compilerOptions": {
+        "target": "esnext",
+        "module": "esnext",
+        "moduleResolution": "node",
         "outDir": "./dist/",
         "sourceMap": true,
         "strict": true,
         "noImplicitReturns": true,
         "noImplicitAny": true,
-        "module": "esnext",
         "downlevelIteration": true,
-        "moduleResolution": "node",
-        "target": "es5",
         "allowJs": true,
         "declaration": true,
         "jsx": "react",
         "baseUrl": ".",
         "typeRoots": ["src/typings", "./node_modules/@types"],
         "paths": {
-            "@/*": ["src/*"]
+            "@/*": ["src/*"],
+            "shared": ["../shared.types.ts"],
         }
     },
-    "include": ["./src/**/*"]
+    "include": ["./src/**/*", "../shared.types.ts"]
 }
