--- a/vuvu/tsconfig.json
+++ b/vuvu/tsconfig.json
@@ -1,16 +1,26 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "strict": true,
-        "noImplicitReturns": true,
-        "noImplicitAny": true,
-        "module": "es6",
+        "target": "esnext",
+        "module": "esnext",
         "moduleResolution": "node",
-        "target": "es5",
+        "strict": true,
+        "jsx": "preserve",
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "noImplicitReturns": true,
+        "sourceMap": true,
+        "baseUrl": ".",
+        "noImplicitAny": true,
         "allowJs": true,
+        "outDir": "./dist/",
+        "typeRoots": ["../shared.types.ts"], 
+        "paths": {
+            "shared": ["../shared.types.ts"],
+        }
     },
     "include": [
-        "./src/**/*"
-    ]
+        "./src/**/*", "../shared.types.ts"
+    ],
+    "exclude": ["node_modules"]
 }
