--- a/rere/package.json
+++ b/rere/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "vite": "^5.0.2"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.3.3",
