--- a/rere/package.json
+++ b/rere/package.json
@@ -8,7 +8,10 @@
     "serve": "vite preview --port 8081 --strictPort",
     "dev": "vite --port 8081 --strictPort",
     "preview": "vite preview",
-    "w:serve": "webpack serve"
+    "w:start": "webpack-cli serve",
+    "w:serve": "serve dist -p 8081",
+    "w:build": "webpack --mode production",
+    "w:clean": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +19,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "vite": "^5.0.2"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.3.3",
