--- a/rere/package.json
+++ b/rere/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rere",
+  "name": "mf-poc_rere",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -33,6 +33,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
     "sass-loader": "^13.3.2",
+    "serve": "^14.2.1",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
