--- a/rere/tsconfig.json
+++ b/rere/tsconfig.json
@@ -1,23 +1,12 @@
 {
     "compilerOptions": {
-        "target": "esnext",
-        "module": "esnext",
-        "moduleResolution": "node",
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "strict": true,
-        "noImplicitReturns": true,
-        "noImplicitAny": true,
-        "downlevelIteration": true,
-        "allowJs": true,
-        "declaration": true,
-        "jsx": "react",
+        "jsx": "react",       
         "baseUrl": ".",
-        "typeRoots": ["src/typings", "./node_modules/@types"],
         "paths": {
             "@/*": ["src/*"],
             "shared": ["../shared.types.ts"],
         }
     },
-    "include": ["./src/**/*", "../shared.types.ts"]
+    "include": ["./src/**/*", "../shared.types.ts"],
+    "extends": "../tsconfig.common.json"
 }
