--- a/vuvu/package.json
+++ b/vuvu/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "@module-federation/utilities": "^3.0.0",
     "@vue/compiler-sfc": "^3.3.8",
     "babel-loader": "^9.1.3",
     "react": "^18.2.0",
