--- a/vuvu/tsconfig.json
+++ b/vuvu/tsconfig.json
@@ -2,10 +2,30 @@
     "compilerOptions": {
         "allowJs": true,
         "importHelpers": true,
+        "jsx": "react", 
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "typeRoots": ["src/typings", "./node_modules/@types"],
-
+        "paths": {
+            "src/*": ["src/*"],
+            "sharedTypes": ["../shared.types.ts"],
+        }
     },
+    "include": ["./src/**/*", "../shared.types.ts"],
     "extends": "../tsconfig.common.json"
 }
+
+
+
+// {
+//     "compilerOptions": {
+//         "jsx": "react",       
+//         "baseUrl": ".",
+//         "paths": {
+//             "src/*": ["src/*"],
+//             "sharedTypes": ["../shared.types.ts"],
+//         }
+//     },
+//     "include": ["./src/**/*", "../shared.types.ts"],
+//     "extends": "../tsconfig.common.json"
+// }
