--- a/rere/package.json
+++ b/rere/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^18.2.16",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
