--- a/rere/tsconfig.json
+++ b/rere/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
-        "jsx": "react",       
+        "jsx": "react",
+        "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
         "paths": {
             "src/*": ["src/*"],
-            "sharedTypes": ["../shared.types.ts"],
+            "shared": ["../shared.types.ts"],
+            "atoms": ["./src/main/atoms/*"]
         }
     },
     "include": ["./src/**/*", "../shared.types.ts"],
