--- a/vuvu/tsconfig.json
+++ b/vuvu/tsconfig.json
@@ -1,16 +1,16 @@
 {
     "compilerOptions": {
         "allowJs": true,
-        "importHelpers": true,
+        // "importHelpers": true,
         "jsx": "react", 
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "typeRoots": ["src/typings", "./node_modules/@types"],
         "paths": {
             "src/*": ["src/*"],
-            "sharedTypes": ["../shared.types.ts"],
         }
     },
     "include": ["./src/**/*", "../shared.types.ts"],
+    // "references": [{ "path": "./tsconfig.node.json" }]
     "extends": "../tsconfig.common.json"
 }
