--- a/vuvu/package.json
+++ b/vuvu/package.json
@@ -45,6 +45,7 @@
     "@module-federation/utilities": "^3.0.0",
     "@vue/compiler-sfc": "^3.3.8",
     "babel-loader": "^9.1.3",
+    "external-remotes-plugin": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "serve": "^14.2.1",
