Basic form with React components in Vuejs

--- a/react_app/tsconfig.json
+++ b/react_app/tsconfig.json
@@ -9,6 +9,6 @@
             "atoms": ["./src/main/atoms/*"]
         }
     },
-    "include": ["./src/**/*", "../shared.types.ts"],
+    "include": ["./src/**/*", "../shared.types.ts", "../declarations.d.ts"],
     "extends": "../tsconfig.common.json"
 }
