--- a/react_app/package.json
+++ b/react_app/package.json
@@ -31,6 +31,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "classnames": "^2.3.2",
     "css-loader": "^6.8.1",
+    "external-remotes-plugin": "^1.0.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-loader": "^7.3.3",
