--- a/vue_app/package.json
+++ b/vue_app/package.json
@@ -44,6 +44,7 @@
     "@babel/preset-react": "^7.23.3",
     "@module-federation/utilities": "^3.0.0",
     "@vue/compiler-sfc": "^3.3.8",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "external-remotes-plugin": "^1.0.0",
     "react": "^18.2.0",
